# yew-bootstrap-icons

./: Cargo.toml
crates/derive-yew-bootstrap-icons/: Cargo.toml
crates/derive-yew-bootstrap-icons/src/: lib.rs
crates/yew-bootstrap-icons/: Cargo.toml
crates/yew-bootstrap-icons-build-deps/: Cargo.toml
crates/yew-bootstrap-icons-build-deps/src/: lib.rs
crates/yew-bootstrap-icons/src/: lib.rs
